Fix/reported bugs fixing (#425)
* fix(notification-list): update notification title rendering to use link component

* fix(ticket-list, notification-list): update rendering of titles

* fix(ticket-details): update translation for ticket status 'OPEN'

* style(ticket-details): update card background color and add new card-light variable

* fix(service-details): update page IDs for service details in mocks

* style(notification-list, ticket-list): add text truncation and alignment to button components

* fix(filters): change flex direction to flex-col-reverse on mobile

* feat(toggle-group): enhance ToggleGroupItem to support icons

* fix(order-list): add missing status options in filters

* chore(package-lock): update package versions to latest releases

* feat(header): add sign-in button to desktop and mobile navigation based on user authentication state

* feat(header): added sign-in label into desktop and mobile navigation components

* refactor(Header): add shouldIncludeSignInButton prop to control sign-in button visibility

* chore: restore @o2s/lint-staged-config in package-lock.json

* chore: updating changelog

---------

--- a/packages/ui/src/theme.css
+++ b/packages/ui/src/theme.css
@@ -3,6 +3,7 @@
     --foreground: hsl(225 9% 9%);
     --card: hsl(220 13% 95%);
     --card-foreground: hsl(240 10% 4%);
+    --card-light: hsl(220 13.04% 95.49%);
     --popover: hsl(0 0% 100%);
     --popover-foreground: hsl(240 10% 4%);
     --primary: hsl(228 66% 50%);
@@ -60,9 +61,10 @@
 
 .theme-dark {
     --background: hsl(226 57% 21%);
-    --foreground: hsl(0 0% 98%);
+    --foreground: #fafafa;
     --card: hsl(224 64% 33%);
     --card-foreground: hsl(0 0% 98%);
+    --card-light: hsl(220 13.04% 95.49%);
     --popover: hsl(240 10% 4%);
     --popover-foreground: hsl(0 0% 98%);
     --primary: hsl(214 100% 97%);
